# cryoem-annotation

./: .env.example  .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  PACKAGING_PLAN.md  README.md  environment-gpu.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-refactoring/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md
cryoem_annotation/: __init__.py  config.py
cryoem_annotation/annotation/: __init__.py  annotator.py  click_collector.py
cryoem_annotation/cli/: annotate.py  extract.py  label.py
cryoem_annotation/core/: __init__.py  colors.py  grid_dataset.py  image_loader.py  image_processing.py  logging_utils.py  matplotlib_utils.py  project.py  sam_model.py
cryoem_annotation/extraction/: __init__.py  extractor.py
cryoem_annotation/io/: __init__.py  masks.py  metadata.py
cryoem_annotation/labeling/: __init__.py  categories.py  labeler.py
cryoem_annotation/navigation/: __init__.py  nav_window.py
examples/: basic_workflow.py  config_example.yaml
tests/: __init__.py  conftest.py
tests/benchmarks/: bench_contour_caching.py  bench_image_processing.py  bench_mask_overlay.py  conftest.py
tests/test_annotation/: __init__.py  test_annotator_grid.py
tests/test_core/: test_grid_dataset.py  test_image_loader.py  test_image_processing.py  test_project.py
tests/test_extraction/: __init__.py  test_extractor.py
tests/test_io/: __init__.py  test_metadata.py
tests/test_labeling/: __init__.py  test_categories.py  test_labeler.py  test_labeler_grid.py
(+4 files in other folders)
