[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoem-annotation"
version = "0.1.0"
description = "Interactive annotation tool for cryo-EM micrographs using Segment Anything Model (SAM)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cryo-EM Annotation Contributors"}
]
keywords = ["cryo-em", "segmentation", "annotation", "sam", "microscopy", "electron-microscopy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
    "torch>=1.7.0",
    "torchvision>=0.8.0",
    "mrcfile>=1.4.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
cryoem-annotate = "cryoem_annotation.cli.annotate:main"
cryoem-label = "cryoem_annotation.cli.label:main"
cryoem-extract = "cryoem_annotation.cli.extract:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cryoem_annotation*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

